--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -12,24 +13,23 @@
         android:theme="@style/Theme.Fabric_detector"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity">
+        </activity>
+        <activity android:name=".moreErrorsActivity"
+            android:parentActivityName=".InfoActivity">
+
+        </activity>
+
+        <activity android:name=".InfoActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".moreErrorsActivity"
-            android:parentActivityName=".errorsActivity">
-
-        </activity>
-        <activity android:name=".errorsActivity"
-            android:parentActivityName=".InfoActivity">
-
-        </activity>
-        <activity android:name=".InfoActivity"
-            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
