--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Fabric_detector"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity">
-        </activity>
-        <activity android:name=".moreErrorsActivity"
-            android:parentActivityName=".InfoActivity">
-
-        </activity>
-
-        <activity android:name=".InfoActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="true">
-
+            android:name=".chartActivity"
+            android:exported="false" />
+        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:name=".moreErrorsActivity"
+            android:parentActivityName=".InfoActivity"></activity>
+        <activity
+            android:name=".InfoActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".imageActivity"
+            android:parentActivityName=".InfoActivity"></activity>
     </application>
 
 </manifest>
